Added logo and removed buttons

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="author" content="Avihay Menahem">
 </head>
 <body>
+<div id="ctLogo"></div>
 <div id="cameraPreview"></div>
 <div id="cameraResult"></div>
 <div class="take-snapshot-btn btn">Take Snapshot</div>
-<div class="clear-snapshot-btn btn">Clear Snapshot</div>
+<div class="clear-snapshot-btn btn">Done :)</div>
 </body>
 </html>
